--- a/package.json
+++ b/package.json
@@ -12,8 +12,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@prisma/client": "^6.12.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
+    "react-router-dom": "^7.7.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.12.0"
   }
 }
