--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.562.0",
     "pg": "^8.16.3",
     "react-router-dom": "^7.7.0"
   },
